tests/ui/form_data_union.stderr
error: #[derive(FormData)] can only be used on structs
 --> $DIR/form_data_union.rs:3:10
  |
3 | #[derive(FormData)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `FormData` (in Nightly builds, run with -Z macro-backtrace for more info)
